samples/_failures_safe/1761730106_bfbbe4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba602260.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ba602260.c:158:40: error: missing terminating ' character
  158 |         tokens[token_count].value[0] = '\
      |                                        ^~
./samples/SAFE/__tmp_ba602260.c:158:9: error: expected expression at end of input
  158 |         tokens[token_count].value[0] = '\
      |         ^~~~~~
./samples/SAFE/__tmp_ba602260.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ba602260.c:158:9: error: expected declaration or statement at end of input
